<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Categories">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/category_background"
            android:padding="16dp"
            android:text="@string/textview"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/no_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/_5_10"
            android:textColor="@android:color/black" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/optionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/button"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_border"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/button"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/button"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/button"
            tools:targetApi="lollipop" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmark_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bookmark_border"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/share" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_design"
            android:enabled="false"
            android:backgroundTint="@android:color/holo_green_dark"
            android:alpha="0.7"
            android:text="@string/next" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>




